# learn

./: .gitignore
apache-commons/: pom.xml
diagrams-py/: .gitignore  README.md  main.dot  main.py  run.sh
electron-example/: package.json
error-prone-gradle/: build.gradle.kts  settings.gradle.kts
error-prone-gradle/gradle/wrapper/: gradle-wrapper.properties
error-prone-gradle/src/main/refaster/: StringIsEmptyRule.refaster
flink/: .gitignore
flink/cc-payment-statistics/: pom.xml
flink/commons/: pom.xml
flink/data-generator/: cc_payments.py  main.py  pyproject.toml  vehicle_location.py  vehicle_order.py  word.py
flink/deploy/: .env  compose.yml  start.sh  stop.sh
flink/deploy/config/: prometheus.yml
flink/deploy/flink/: Dockerfile
flink/total-vehicle-mileage/: pom.xml
flink/vehicle-order-status/: pom.xml
flink/vehicle-statistics-mileage/: pom.xml
flink/word-count/: pom.xml
gateway-dispatch/: build.gradle.kts  run.sh  scratch.http  settings.gradle.kts
gateway-dispatch/deploy/: docker-compose.yaml
gateway-dispatch/gateway-service/: Dockerfile  build.gradle.kts
gateway-dispatch/gateway-service/src/main/resources/: application.yaml
gateway-dispatch/hello-service/: Dockerfile  build.gradle.kts
gateway-dispatch/hello-service/src/main/resources/: application.yaml
go-dynamic-entity/: define.go  go.mod  go.sum  main.go
nuxt-starter/: app.vue  nuxt.config.ts  package-lock.json  package.json
nuxt-starter/components/: AppAside.vue  AppHeader.vue
nuxt-starter/pages/: config.vue  login.vue
openapi-generate-api-client/: README.md  build.gradle.kts  settings.gradle.kts
openapi-generate-api-client/gradle/wrapper/: gradle-wrapper.properties
openapi-generate-api-client/src/main/kotlin/: Main.kt
openapi-generate-api-client/src/main/resources/: hello-world.yaml
rust-example/src/: main.rs
rye-workspace/: pyproject.toml
rye-workspace/lib/scripts/: README.md  main.py  pyproject.toml
serverless-aws-python-lmabda/: serverless.yml
spock/parallel-run-spock-and-mariadb4j/: build.gradle  settings.gradle
spock/parallel-run-spock-and-mariadb4j/src/test/resources/: SpockConfig.groovy  application.yml
spock/springboot-spock/: settings.gradle
spring-aspect/: build.gradle  settings.gradle
spring-aspect/src/main/resources/: application.properties
springboot-spock/: build.gradle
springboot-spock/src/test/resources/: application.properties  user-init.sql
(+60 files in other folders)
