[project]
name = "rye-workspace"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "redxiiikkTW", email = "116648160+redxiiikkTW@users.noreply.github.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.12"

[tool.rye]
managed = true
virtual = true
dev-dependencies = [
    "black>=24.3.0",
]

[tool.rye.workspace]
members = [
    "lib/*"
]
