[project]
name = "rye-workspace"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "redxiiikk", email = "72877527+redxiiikk@users.noreply.github.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.12"

[tool.rye]
managed = true
virtual = true
dev-dependencies = [
    "black>=24.3.0",
]

[tool.rye.workspace]
members = [
    "lib/*"
]
