[project]
name = "scripts"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "redxiiikkTW", email = "116648160+redxiiikkTW@users.noreply.github.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/scripts"]