[project]
name = "scripts"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "redxiiikk", email = "72877527+redxiiikk@users.noreply.github.com" }
]
dependencies = [
    "requests>=2.31.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/scripts"]
